java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCastOrMethodInvocation58494e-hints.pass
Cast ...o to String
Cast ...o to CastOrMethodInvocation58494e
